--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,30 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Sistem Pengaduan Sekolah" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sistem Layanan & Pengaduan Aspirasi SMKN 2 Karanganyar. Developed by XII RPL A SMKN 2 Karanganyar."
     />
+    <!-- Open Graph / Facebook -->
+    <!-- <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" /> -->
+    <meta property="og:title" content="Sistem Pengaduan Sekolah" />
+    <meta
+      property="og:description"
+      content="Sistem Layanan & Pengaduan Aspirasi SMKN 2 Karanganyar. Developed by XII RPL A SMKN 2 Karanganyar."
+    />
+    <meta property="og:image" content="%PUBLIC_URL/images/preview.png" />
+    <!-- Twitter -->
+    <!-- <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" /> -->
+    <meta property="twitter:title" content="Sistem Pengaduan Sekolah" />
+    <meta
+      property="twitter:description"
+      content="Sistem Layanan & Pengaduan Aspirasi SMKN 2 Karanganyar. Developed by XII RPL A SMKN 2 Karanganyar."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL/images/preview.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
