Change logo & manifest

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       property="og:description"
       content="Sistem Layanan & Pengaduan Aspirasi SMKN 2 Karanganyar. Developed by XII RPL A SMKN 2 Karanganyar."
     />
-    <meta property="og:image" content="%PUBLIC_URL/images/preview.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/preview.png" />
     <!-- Twitter -->
     <!-- <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" /> -->
@@ -28,7 +28,7 @@
       property="twitter:description"
       content="Sistem Layanan & Pengaduan Aspirasi SMKN 2 Karanganyar. Developed by XII RPL A SMKN 2 Karanganyar."
     />
-    <meta property="twitter:image" content="%PUBLIC_URL/images/preview.png" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/images/preview.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
