Cleaning code & some little changes

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
       content="Sistem Layanan & Pengaduan Aspirasi SMKN 2 Karanganyar. Developed by XII RPL A SMKN 2 Karanganyar."
     />
     <!-- Open Graph / Facebook -->
-    <!-- <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" /> -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pengaduan-smkn2kra.vercel.app" />
     <meta property="og:title" content="Sistem Pengaduan Sekolah" />
     <meta
       property="og:description"
@@ -21,8 +21,11 @@
     />
     <meta property="og:image" content="%PUBLIC_URL%/images/preview.png" />
     <!-- Twitter -->
-    <!-- <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" /> -->
+    <meta property="twitter:card" content="%PUBLIC_URL%/images/preview.png" />
+    <meta
+      property="twitter:url"
+      content="https://pengaduan-smkn2kra.vercel.app"
+    />
     <meta property="twitter:title" content="Sistem Pengaduan Sekolah" />
     <meta
       property="twitter:description"
