Add _redirects & change meta link

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pengaduan-smkn2kra.vercel.app" />
+    <meta property="og:url" content="https://pengaduan-smkn2kra.netlify.app/" />
     <meta property="og:title" content="Sistem Pengaduan Sekolah" />
     <meta
       property="og:description"
@@ -24,7 +24,7 @@
     <meta property="twitter:card" content="%PUBLIC_URL%/images/preview.png" />
     <meta
       property="twitter:url"
-      content="https://pengaduan-smkn2kra.vercel.app"
+      content="https://pengaduan-smkn2kra.netlify.app/"
     />
     <meta property="twitter:title" content="Sistem Pengaduan Sekolah" />
     <meta
