Update meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     />
     <meta property="og:image" content="%PUBLIC_URL%/images/preview.png" />
     <!-- Twitter -->
-    <meta property="twitter:card" content="%PUBLIC_URL%/images/preview.png" />
+    <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
       content="https://pengaduan-smkn2kra.netlify.app/"
